<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dim_foreground_material_light"
    android:backgroundTint="@color/dim_foreground_material_light"
    android:icon="@mipmap/ic_launcher"
    android:clickable="false"
    android:gravity="center_horizontal">


    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="29dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="100dp"
                android:text="@string/button1"
                android:width="100dp"
                android:background="@android:color/darker_gray"
                android:textSize="36dp"
                android:layout_margin="1dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button2"
                android:height="100dp"
                android:width="100dp"
                android:background="@android:color/darker_gray"
                android:textSize="36dp"
                android:layout_margin="1dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button3"
                android:height="100dp"
                android:width="100dp"
                android:background="@android:color/darker_gray"
                android:textSize="36dp"
                android:layout_margin="1dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button4"
                android:height="100dp"
                android:width="100dp"
                android:background="@android:color/darker_gray"
                android:textSize="36dp"
                android:layout_margin="1dp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button5"
                android:height="100dp"
                android:width="100dp"
                android:background="@android:color/darker_gray"
                android:textSize="36dp"
                android:layout_margin="1dp" />
            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button6"
                android:height="100dp"
                android:width="100dp"
                android:background="@android:color/darker_gray"
                android:textSize="36dp"
                android:layout_margin="1dp" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center">
            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button7"
                android:height="100dp"
                android:width="100dp"
                android:background="@android:color/darker_gray"
                android:textSize="36dp"
                android:layout_margin="1dp" />
            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button8"
                android:height="100dp"
                android:width="100dp"
                android:background="@android:color/darker_gray"
                android:textSize="36dp"
                android:layout_margin="1dp" />
            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button9"
                android:height="100dp"
                android:width="100dp"
                android:background="@android:color/darker_gray"
                android:textSize="36dp"
                android:layout_margin="1dp" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout1"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Info:"
            android:id="@+id/info"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/holo_green_light" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Igrac"
            android:id="@+id/igrac"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/izjednaceno"
            android:layout_marginEnd="47dp"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Izjednaceno"
            android:id="@+id/izjednaceno"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Android"
            android:id="@+id/android"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/izjednaceno"
            android:layout_marginStart="39dp"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="0"
            android:id="@+id/counterIgrac"
            android:layout_alignBaseline="@+id/counterIzjednaceno"
            android:layout_alignBottom="@+id/counterIzjednaceno"
            android:layout_alignEnd="@+id/igrac"
            android:layout_marginEnd="15dp"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="0"
            android:id="@+id/counterIzjednaceno"
            android:layout_below="@+id/izjednaceno"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="0"
            android:id="@+id/counterAndroid"
            android:layout_below="@+id/android"
            android:layout_alignEnd="@+id/android"
            android:layout_marginEnd="24dp"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Povratak u izbornik"
        android:id="@+id/button_back"
        android:onClick="goBack"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>




